# CXSimulator

./: LICENSE  README.md  pyproject.toml
data/sqls/: ga360.sql
data/tmp/: sample_campaign_embeddings.json  test_node2embedding.json  train_node2embedding.json  valid_node2embedding.json
src/cxsim/: __main__.py  task.py
src/cxsim/config/: .env.template  env.py
src/cxsim/data/: base_graph.py  data_store.py  embedding_graph.py
src/cxsim/eval/: evaluation.py
src/cxsim/jobs/: preprocess.py  simulation.py  train.py
src/cxsim/trainer/: gbdt.py
src/cxsim/utils/: azure_openai.py  gcp.py
